# graph-pattern-matching

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  dependency_install.sh
App/: App.cpp  CMakeLists.txt  cudaTest.cu  cudaTest.h
app/: CMakeLists.txt  app.cpp  app.h  frame.cpp  frame.h  graphCanvas.cpp  graphCanvas.h  graphPanel.cpp  graphPanel.h  render.cpp  render.h
app/shaders/: edge.fsh  edge.vsh  node.fsh  node.vsh  utility.fsh  utility.vsh
app/src/: app.cpp  config.h.in  configDefaults.h  configDialog.cpp  configDialog.h  frame.cpp  frame.h  graphCanvas.cpp  graphCanvas.h  graphDrawingSettings.h  graphManager.cpp  graphManager.h  graphPanel.cpp  graphPanel.h  graphPatternMatchingCLI.cpp  graphPatternMatchingCLI.h
image/: CMakeLists.txt  image.cpp  isomorphism.cpp
image/edge_detection/: README.md  data.py  graph.py  model.py  requirements.txt  validate.py
image/edge_detection/result/checkpoint-3750/: rng_state.pth  trainer_state.json
image/include/: image.h
image/subisomorphism/: check_if_isomorphism.py  data.py  lightning_module.py  model.py  test.py  train.py
image/subisomorphism/checkpoints/: gin-epochepoch=00-val_lossval_loss=0.00.ckpt  gin-epochepoch=01-val_lossval_loss=0.00.ckpt  gin-epochepoch=02-val_lossval_loss=0.00.ckpt  gin-epochepoch=03-val_lossval_loss=0.00.ckpt  gin-epochepoch=04-val_lossval_loss=0.00.ckpt  gin-epochepoch=05-val_lossval_loss=0.00.ckpt  gin-epochepoch=06-val_lossval_loss=0.00.ckpt  gin-epochepoch=07-val_lossval_loss=0.00.ckpt  gin-epochepoch=08-val_lossval_loss=0.00.ckpt  gin-epochepoch=09-val_lossval_loss=0.00.ckpt  gin-epochepoch=10-val_lossval_loss=0.00.ckpt  gin-epochepoch=11-val_lossval_loss=0.00.ckpt  gin-epochepoch=12-val_lossval_loss=0.00.ckpt  gin-epochepoch=13-val_lossval_loss=0.00.ckpt  gin-epochepoch=14-val_lossval_loss=0.00.ckpt  gin-epochepoch=15-val_lossval_loss=0.00.ckpt  gin-epochepoch=16-val_lossval_loss=0.00.ckpt  gin-epochepoch=17-val_lossval_loss=0.00.ckpt  gin-epochepoch=18-val_lossval_loss=0.00.ckpt  gin-epochepoch=19-val_lossval_loss=0.00.ckpt  gin-epochepoch=2.ckpt  gin-epochepoch=20-val_lossval_loss=0.00.ckpt  gin-epochepoch=21-val_lossval_loss=0.00.ckpt  gin-epochepoch=22-val_lossval_loss=0.00.ckpt  gin-epochepoch=23-val_lossval_loss=0.00.ckpt  gin-epochepoch=24-val_lossval_loss=0.00.ckpt  gin-epochepoch=25-val_lossval_loss=0.00.ckpt  gin-epochepoch=26-val_lossval_loss=0.00.ckpt  gin-epochepoch=27-val_lossval_loss=0.00.ckpt  gin-epochepoch=28-val_lossval_loss=0.00.ckpt  gin-epochepoch=29-val_lossval_loss=0.00.ckpt
image/subisomorphism/lightning_logs/version_0/: events.out.tfevents.1732302832.DESKTOP-Q6GC086.9760.0
image/subisomorphism/lightning_logs/version_1/: events.out.tfevents.1732303395.DESKTOP-Q6GC086.15804.0
image/subisomorphism/lightning_logs/version_1/checkpoints/: epoch=19-step=500.ckpt
image/subisomorphism/lightning_logs/version_10/: events.out.tfevents.1732305474.DESKTOP-Q6GC086.10684.0
image/subisomorphism/lightning_logs/version_2/: events.out.tfevents.1732303633.DESKTOP-Q6GC086.7852.0
image/subisomorphism/lightning_logs/version_3/: events.out.tfevents.1732303791.DESKTOP-Q6GC086.5884.0
image/test/: CMakeLists.txt  test.cpp
pattern/: CMakeLists.txt  cpu_pattern.cpp  pattern.cpp
pattern/include/: cuda_helpers.cuh  induced_minor_matcher.h  induced_subgraph_matcher.h  isomorphism_matcher.h  miner_minor_matcher.hpp  minor_matcher.h  nauty_isomorphism_matcher.hpp  pattern.h  solvers.h  subgraph_matcher.h  topological_induced_minor_matcher.h  topological_minor_matcher.h  vf2Matcher.h  vf2solver.h
pattern/include/isomorphismSolvers/: isomorphism_matcher.h  native_isomorphism_matcher.h  vf2_isomorphism_solver.hpp
pattern/include/minorSolvers/: induced_minor_exact_matcher.h  induced_minor_heuristic.h  induced_minor_matcher.h  induced_topological_minor_heuristic.h  miner_minor_matcher.hpp  minor_exact.h  minor_exact_matcher.h  minor_heuristic.h  minor_matcher.h  minor_matchers.h  native_minor_matcher.h  topological_induced_minor_exact_matcher.h  topological_induced_minor_heuristic_solver.h  topological_induced_minor_matcher.h  topological_minor_exact.h  topological_minor_exact_matcher.h  topological_minor_heuristic.h  topological_minor_heuristic_solver.h  topological_minor_matcher.h
pattern/include/subgraphSolvers/: cuda_subgraph_matcher.h  induced_subgraph_matcher.h  native_subgraph_matcher.h  subgraph_matcher.h  subgraph_matchers.h  vf2_induced_subgraph_matcher.hpp  vf2_induced_subgraph_solver.hpp  vf2_subgraph_matcher.hpp  vf2_subgraph_solver.hpp
pattern/include/vf2libSolvers/: vf2_induced_subgraph_solver.hpp  vf2_isomorphism_solver.hpp  vf2_subgraph_solver.hpp
pattern/include/vf3libSolvers/: vf3_subgraph_solver.hpp
pattern/src/: cpu_pattern.cpp  induced_minor_matcher.cpp  induced_subgraph_matcher.cpp  isomorphism_matcher.cpp  minor_matcher.cpp  native_subgraph_matcher.cpp  subgraph_matcher.cpp  topological_induced_minor_matcher.cpp  topological_minor_matcher.cpp
pattern/src/isomorphismSolvers/: native_isomorphism_matcher.cpp  vf2_isomorphism_solver.cpp
pattern/src/minorMinerSolvers/: miner_minor_solver.cpp
pattern/src/minorSolvers/: induced_minor_exact_matcher.cpp  induced_minor_heuristic.cpp  induced_minor_matcher.cpp  induced_topological_minor_heuristic.cpp  miner_minor_solver.cpp  minor_exact_matcher.cpp  minor_matcher.cpp  topological_induced_minor_matcher.cpp  topological_minor_exact.cpp  topological_minor_heuristic.cpp  topological_minor_matcher.cpp
pattern/src/nautySolvers/: nauty_isomorphism_solver.cpp
pattern/src/subgraphSolvers/: cuda_subgraph_matcher.cu  induced_subgraph_matcher.cpp  native_subgraph_matcher.cpp  vf2_induced_subgraph_solver.cpp  vf2_subisomorphism_solver.cpp
pattern/src/vf2libSolvers/: vf2_induced_subgraph_solver.cpp  vf2_isomorphism_solver.cpp  vf2_subisomorphism_solver.cpp
pattern/src/vf3libSolvers/: vf3_subisomorphism_solver.cpp
pattern/test/: CMakeLists.txt  cudaTests.cpp  isomorphismMatcherTests.cpp  minorMatcherTests.cpp  subgraphMatcherTests.cpp  test.cpp
(+56 files in other folders)
